@@ -10,6 +10,9 @@ all changes without author attribution are by Doug MacEachern
 
 =item 1.23_01-dev
 
+add PerlAddVar directive, like PerlSetVar, but uses ap_table_add
+instead of ap_table_set
+
 Makefile.PL warns about 5.6.0+uselargefiles if USE_APXS
 
 Apache::Table->unset can now be called with an array reference
